<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_window_background"
        android:orientation="vertical"
        tools:context=".views.activities.HomeActivity">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="36dp"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/choose_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/choose_board_size"
            android:textAllCaps="true"
            android:textSize="18dp"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/chooseBoardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choose_board"
            android:gravity="center"
            android:orientation="horizontal">


            <android.support.v7.widget.AppCompatTextView
                android:textAllCaps="true"
                android:id="@+id/fourGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="4 x 4"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="48dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sixGrid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="6 x 6"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="48dp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/start"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/start_game"
            android:textSize="24dp"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#fff"
                android:textSize="18dp"
                android:textStyle="bold"/>
        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/chooseNames"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6fff"
            android:text="@string/choose_names"
            android:textColor="#fff"
            android:textSize="16dp"
            android:textStyle="bold"/>

    </android.support.v7.widget.LinearLayoutCompat>
</layout>